Store raw cwl file when creating dag & Support read cwl file
